sfexchange-dreamforce-project/src/objects/Log__c.object
<CustomObject>
    <description>Stores information about the automated onboardings that users can go through. Used for reporting.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timedone__c</fullName>
        <label>Time done</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TrainingName__c</fullName>
        <label>Training Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TrainingName__c</columns>
        <columns>Description__c</columns>
        <columns>Timedone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Log-{yymm}-{0000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>